--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -5,11 +6,266 @@
           box-sizing: border-box;
 }
 
+:root {
+  --softOrange: hsl(35, 77%, 62%);
+  --softRed: hsl(5, 85%, 63%);
+  --offWhite: hsl(36, 100%, 99%);
+  --grayishBlue: hsl(233, 8%, 79%);
+  --darkGrayishBlue: hsl(236, 13%, 42%);
+  --veryDarkBlue: hsl(240, 100%, 5%);
+}
+
+body {
+  font-family: "Inter", sans-serif;
+  position: relative;
+}
+
+.overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
 img {
   max-width: 100%;
+  width: 100%;
 }
 
 html {
   font-size: 15px;
+}
+
+.showing {
+  list-style: none;
+  color: var(--veryDarkBlue);
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 2rem;
+  top: 0;
+  right: 0;
+  padding-left: 1.5rem;
+  height: 100vh;
+  width: 60%;
+  background-color: var(--offWhite);
+  z-index: 2;
+}
+
+.showing div {
+  padding: 2rem 1.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.showing img {
+  height: 40px;
+  width: 40px;
+}
+
+.hidden {
+  display: none;
+}
+
+li:hover {
+  color: var(--softOrange);
+  cursor: pointer;
+}
+
+section {
+  margin: 1rem 0;
+}
+
+header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 1.25rem;
+}
+
+main {
+  padding: 1.25rem;
+}
+
+.hero-section {
+  margin-bottom: 2.5rem;
+}
+
+.hero-section button {
+  margin-top: 1.5rem;
+  width: 175px;
+  padding: 1rem 1rem;
+  background-color: var(--softRed);
+  color: var(--offWhite);
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  border: none;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.hero-section button:hover {
+  background-color: var(--veryDarkBlue);
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+p {
+  color: var(--darkGrayishBlue);
+  line-height: 150%;
+}
+
+.web3 {
+  margin-bottom: 2rem;
+}
+
+aside {
+  padding: 1rem;
+  background-color: var(--veryDarkBlue);
+}
+
+aside h2 {
+  color: var(--softOrange);
+}
+
+aside h3 {
+  color: var(--offWhite);
+  margin-top: 1.5rem;
+  margin-bottom: 0.75rem;
+}
+
+aside h3:hover {
+  color: var(--softOrange);
+  cursor: pointer;
+}
+
+aside p {
+  color: var(--grayishBlue);
+  margin-bottom: 0.75rem;
+}
+
+.divider {
+  border-bottom: 0.5px solid var(--grayishBlue);
+  padding: 0.5rem 0;
+}
+
+.cards {
+  margin-bottom: 3rem;
+}
+
+.cards article {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 1rem;
+  margin-bottom: 1rem;
+}
+
+.cards article img {
+  height: 100px;
+  width: 100px;
+  -o-object-fit: fill;
+     object-fit: fill;
+}
+
+.content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.content span {
+  color: var(--grayishBlue);
+  font-weight: 700;
+  font-size: 2rem;
+}
+
+.content h3 {
+  margin-bottom: 0.75rem;
+}
+
+.content h3:hover {
+  color: var(--softRed);
+  cursor: pointer;
+}
+
+.content p {
+  color: var(--darkGrayishBlue);
+}
+
+@media (min-width: 1024px) {
+  body {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .nav-menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 2rem;
+    color: var(--darkGrayishBlue);
+    border: 1px solid black;
+    list-style: none;
+  }
+  .menu-close {
+    display: none;
+  }
+  .menu-icon {
+    display: none;
+  }
+  .hero-section {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 2rem;
+  }
+  .hero-content article {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+    place-items: center;
+    margin-top: 1rem;
+    margin-bottom: 0;
+  }
+  .cards {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+    gap: 1.5rem;
+  }
 }
 /*# sourceMappingURL=style.css.map */
